brmapp/static/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins",sans-serif;
}


body{
    display: flex;
    justify-content: center;
    align-items:center;
    min-height: 100vh;
    background: url('img1.jpg')no-repeat;
    background-size: cover;
    background-position: center;
}

label{
    font-size: 12px;
    color: #000000;
   
}

.wrapper{
    width: 750px;
    background: rgba(255, 255, 255, .1);
    border: 2px solid rgba(255, 255, 255, .2);
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
    backdrop-filter: blur(50px);
    border-radius: 10px;
    color:white;
    padding: 40px 35px 55px;
    margin:0 10px;
}


.wrapper h2{
    font-size: 36px;
    text-align: center;
    margin-bottom: 20px;


}

.wrapper.input-box{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    background: rgb(23, 55, 87);

}

.input.box.input.field{
    position: relative;
    width: 48%;
    height: 50px;
    background: linear-gradient(to right, #000000, #333333); 
    margin: 13px 0;

}

.input.box.input.field input{
    width: 100%;
    height: 100%;
    background: transparent;
    border: 2px solid rgba(255, 255, 255, .2);
    outline: none;
    font-size: 20px;
    color:black;
    border-radius: 6px;
    padding:15px 15px 15px 40px;

}

.input.box.input.field input::placeholder{
    color: black;
}

.input.box.input.field i{
    position: absolute;
    top:50%;
    transform: translateY(-50%);
    font-size: 20px;
    left: 15px;
}

.wrapper label{
    display: inline-block;
    font-size: 14.5px;
    margin: 10px 0 23px;
}

.wrapper label input{
    accent-color: white;
    margin-right: 5px;

}

.btn{
    width: 100%;
    height: 45px;
    background: white;
    border: none;
    outline: none;
    border-radius: 6px;
    box-shadow: 0 0 10px rgba(0,0, 0, .1);
    cursor:pointer;
    font-size: 16px;
    color:black;
    font-weight: 600;
}

#form{
    display: flex;
    justify-content: center;
}
#formContent{
    display: flex;
    justify-content: center;
    flex-direction: column;
}
@media(max-width:576px){
    .input.box.input.field{
        width: 100%;
        margin: 10px 0;
        
    }
}

